Fix layout issues with LikedSongBtn

--- a/src/assets/styles/cmps/Modal.scss
+++ b/src/assets/styles/cmps/Modal.scss
@@ -51,6 +51,7 @@
         height: 100%;
         textarea {
           height: 100%;
+          resize:none;
         }
       }
     }
@@ -89,6 +90,14 @@
     .img {
       width: 11.25em;
       height: 11.25em;
+      .img-container {
+        width: 11.25em;
+        height: 11.25em;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
     .save-container {
       width: 100%;
@@ -110,7 +119,6 @@
         }
       }
     }
-
 
     .description * {
       font-family: 'gotham-bold';
